# ottomator-agents

livekit-agent/: CHANGELOG.md  DEPLOYMENT.md  EXAMPLES.md  README.md  TESTING.md  TUTORIAL.md
voice-todo-agent/: .env.example  .gitignore  README.md  pyproject.toml  todo_agent.py
voice-todo-mobile/: .env.example  .gitignore  App.tsx  README.md  SETUP.md  app.json  package.json  tsconfig.json
voice-todo-mobile/src/screens/: HomeScreen.tsx  SettingsScreen.tsx  TaskListScreen.tsx  VoiceScreen.tsx
voice-todo-mobile/src/services/: LiveKitService.ts  TaskStorage.ts
